tests/suite/fail/regression/fuzz/fuzz_garbage_150.ny
fn main() { let x = @150 } //~ ERROR
